# churnlens

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
reports/: customer_360.md  data_dictionary.md  data_quality.md  features.md  labels.md
scripts/: build_customer360.py  build_features.py  build_labels.py  build_silver.py  ingest.py
src/churnlens/: __init__.py
src/churnlens/config/: settings.py
src/churnlens/io/: __init__.py  customer360.py  data_dictionary.py  features.py  ingest.py  labels.py  silver.py  warehouse.py
src/churnlens/utils/: dates.py  logging.py
src/churnlens/validation/: runner.py  schemas.py
tests/: test_customer360.py  test_dates.py  test_features.py  test_ingest.py  test_labels.py  test_logging.py  test_settings.py  test_silver.py  test_validation.py
